[gd_scene load_steps=2 format=3]

[ext_resource path="res://scripts/Fichajes.gd" type="Script" id=1]

[node name="Fichajes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.2, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SISTEMA DE FICHAJES"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="GachaButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "GACHAPÃ“N DE FICHAJES"

[node name="VSeparator2" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)

[node name="RuletaButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "LA RULETA"

[node name="VSeparator3" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 50)

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "VOLVER AL BARRIO"

